# pdfextract

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
rise-import-engine/: README.md  package.json  styles.css
rise-import-engine/samples/: generate_sample.py
rise-import-engine/src/: constants.js  pipeline.js
rise-import-engine/src/modules/: cabinetDetector.js  dimensionDetector.js  exporter.js  inventoryBuilder.js  parser.js  projectDetector.js  uploader.js
rise-import-engine/tests/: detectors.test.js  helpers.js  pipeline.test.js
rise_engine/: __init__.py  cli.py  exporter.py  hardware.py  model.py  pipeline.py  reader.py  report.py  review.py  schedule.py  services.py
samples/: generate_sample_sod.py
src/: main.js
src/modules/: finishDetector.js  hardwareExtractor.js  indentGenerator.js  pdfReader.js  roomDetector.js
src/pdfextract/: __init__.py  cli.py  extractor.py  formatters.py  inventory_report.py  plugin.py
src/pdfextract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ui/: render.js
tests/: conftest.py  detectors.test.js  parser_exporter.test.js  test_end_to_end.py  test_extractor.py  test_formatters.py  test_hardware.py  test_inventory.py  test_pipeline.py  test_plugin.py  test_review.py  test_schedule.py  test_services.py
