[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfextract"
version = "0.1.0"
description = "A plugin that extracts data from PDF files and converts it into tabular formats (CSV, TSV, JSON, Markdown)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pdfextract contributors" }]
keywords = ["pdf", "extract", "table", "tabular", "plugin", "csv"]
dependencies = [
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
    "ruff>=0.5",
    "build>=1.2",
]

[project.scripts]
pdfextract = "pdfextract.cli:main"

[project.entry-points."pdfextract.plugins"]
pdf_table = "pdfextract.extractor:PdfTableExtractor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
